feat: olympiad phases endpoint
